@@ -4120,3 +4120,18 @@ year = {1998},
 doi = {10.1063/1.476722},
 URL = {https://doi.org/10.1063/1.476722},
 }
+
+@article{Garza2018,
+ author = {Garza, Alejandro J. and Bell, Alexis T. and Head-Gordon, Martin},
+ title = {Nonempirical Meta-Generalized Gradient Approximations for Modeling Chemisorption at Metal Surfaces},
+ journal = {Journal of Chemical Theory and Computation},
+ volume = {0},
+ number = {0},
+ pages = {null},
+ year = {0},
+ doi = {10.1021/acs.jctc.8b00288},
+ note ={PMID: 29746113},
+ URL = {https://doi.org/10.1021/acs.jctc.8b00288},
+ eprint = {https://doi.org/10.1021/acs.jctc.8b00288}
+}
+
