@@ -44,4 +44,4 @@ noinst_HEADERS = lda_c_1d_csc.c lda_c_1d_loos.c lda_c_2d_amgb.c		\
   mgga_x_mn12.c mgga_x_ms.c mgga_x_mvs.c mgga_x_pbe_gx.c		\
   mgga_x_pkzb.c mgga_x_sa_tpss.c mgga_x_scan.c mgga_x_tau_hcth.c	\
   mgga_x_tm.c mgga_x_tpss.c mgga_x_vt84.c mgga_c_revscan.c		\
-  mgga_x_br89_explicit.c gga_k_exp4.c mgga_xc_b98.c
+  mgga_x_br89_explicit.c gga_k_exp4.c mgga_xc_b98.c mgga_x_rtpss.c
