@@ -324,3 +324,4 @@ extern func_reference_type xc_ref_Ghiringhelli2010_014106;
 extern func_reference_type xc_ref_Trickey2011_075146;
 extern func_reference_type xc_ref_Karasiev2006_111;
 extern func_reference_type xc_ref_Becke1998_2092;
+extern func_reference_type xc_ref_Garza2018;
